# crm

./: .env  .env.example  .gitignore  GEMINE.md  README.md  pyproject.toml
.github/workflows/: pytest.yml
.hypothesis/constants/: 08849e6e30446f52  0a2e32f90503d4a6  1083175e1f7e6c4c  22dcdcbac290d98d  242e79aaa9bb20e4  2c9226c08591f80c  323a5a0f277aa8b2  32b18d3e9156198d  3653117b7f8e66fe  3861b73a95ecd6cb  48d2c0a2da771f64  4e01470d31952f4a  528df0a5ef88f4bd  559e7d266bda6307  74d1737878d4e75f  790751a3136e40f8  7fcf255e2f7cceb2  8988b69d9c6cbeb8  a2c653d33df06bd0  bfa4adacf7e1c3c2  c38a8f70fbe23803  ca43dd4379fbca46  d2e1c609b47526b1  da39a3ee5e6b4b0d  da7b5c470a6e9eb6  df6db56daedb1e7a  f350ebe3fb2b7ed1  f609db812bc58513
scripts/: commit.sh  db_viewer.py  generate_test_data.py  init_db.py  start_server.sh
src/: config.py  orchestrator.py
src/db/: database.py
src/hotmart/: auth.py  client.py  sales.py
src/logic/: audiences.py  remarketing.py  reporting.py  user_logic.py
src/manychat/: client.py
src/models/: schemas.py
src/pipelines/: hotmart_to_db.py  manychat_csv_importer.py
src/scripts/: export_meta_audience.py  export_meta_audience_v2.py
tests/: test_audiences.py  test_config.py  test_consolidation.py  test_data_models.py  test_database.py  test_date_chunks.py  test_hotmart_auth.py  test_hotmart_client.py  test_hotmart_sales.py  test_manychat_client.py  test_manychat_csv_importer.py  test_mapping.py  test_pipelines.py  test_remarketing.py  test_schemas.py
