[project]
name = "crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "responses>=0.26.0",
    "ruff>=0.15.4",
]
